--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".splash_screen"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@color/white">
 
     <ImageView
         android:layout_width="300dp"
