--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,19 +21,6 @@
             android:orientation="vertical"
             >
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/img_details"
-                android:layout_width="150dp"
-                android:gravity="center"
-                android:layout_height="150dp"
-                android:src="@drawable/taqsas"
-                android:layout_margin="5dp"
-                android:layout_gravity="center"
-                app:civ_border_color="@color/white"
-                app:civ_border_width="2dp"
-                android:layout_marginRight="10dp"/>
-
             <androidx.cardview.widget.CardView
                 android:layout_width="300dp"
                 android:layout_height="80dp"
@@ -50,193 +37,20 @@
 
 
                     <TextView
-                        android:id="@+id/txt_namedetails"
+                        android:id="@+id/txt_username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="gola"
                         android:layout_marginTop="10dp"
                         android:textColor="#7553B4"
                         android:textStyle="bold"
-                        android:textSize="18sp"
+                        android:textSize="30sp"
                         android:gravity="center_horizontal">
                     </TextView>
 
-                    <TextView
-                        android:id="@+id/txt_speciesdetails"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="gola"
-                        android:layout_marginTop="15dp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:textSize="15sp"
-                        android:gravity="center_horizontal">
-                    </TextView>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="140dp"
-                    android:layout_height="80dp"
-                    app:cardCornerRadius="20dp"
-                    android:backgroundTint="@color/white"
-                    app:cardElevation="20dp"
-                    android:layout_marginBottom="30dp"
-                    android:layout_marginRight="20dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_gravity="center"
-                        android:gravity="center">
-
-                        <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:src="@drawable/ic_action_profile"
-                            android:layout_gravity="center"
-                            >
-
-                        </ImageView>
-
-                        <TextView
-                            android:id="@+id/txt_statusdetails"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="si"
-                            android:layout_gravity="center"
-                            >
-                        </TextView>
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="140dp"
-                    android:layout_height="80dp"
-                    app:cardCornerRadius="20dp"
-                    android:backgroundTint="@color/white"
-                    app:cardElevation="20dp"
-                    android:layout_marginBottom="30dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_gravity="center"
-                        android:gravity="center">
-
-                        <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:src="@drawable/ic_action_genre"
-                            android:layout_gravity="center"
-                            >
-
-                        </ImageView>
-
-                        <TextView
-                            android:id="@+id/txt_genre"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="si"
-                            android:layout_gravity="center"
-                            >
-                        </TextView>
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="140dp"
-                    android:layout_height="80dp"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="20dp"
-                    android:backgroundTint="@color/white"
-                    android:layout_marginBottom="30dp"
-                    android:layout_marginRight="20dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_gravity="center"
-                        android:gravity="center">
-
-                        <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:src="@drawable/ic_action_profile"
-                            android:layout_gravity="center"
-                            >
-
-                        </ImageView>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="si"
-                            android:layout_gravity="center"
-                            >
-                        </TextView>
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="140dp"
-                    android:layout_height="80dp"
-                    app:cardCornerRadius="20dp"
-                    android:backgroundTint="@color/white"
-                    app:cardElevation="20dp"
-                    android:layout_marginBottom="30dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_gravity="center"
-                        android:gravity="center">
-
-                        <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:src="@drawable/ic_action_location"
-                            android:layout_gravity="center"
-                            >
-
-                        </ImageView>
-
-                        <TextView
-                            android:id="@+id/txt_location"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="si"
-                            android:layout_gravity="center"
-                            >
-                        </TextView>
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
 
         </LinearLayout>
 
